--- a/src/client/package.json
+++ b/src/client/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "axios": "^1.2.2",
-    "vue": "^3.2.45"
+    "vue": "^3.2.45",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
