--- a/api.yaml
+++ b/api.yaml
@@ -29,6 +29,7 @@ spec:
   selector:
     app: tasksapp
   ports:
-    - port: 5000
+    - protocol: TCP
+      port: 5000
       targetPort: 5000
       nodePort: 30000
