--- a/api.yaml
+++ b/api.yaml
@@ -25,9 +25,11 @@ kind: Service
 metadata:
   name: backend-service
 spec:
+  type: NodePort
   selector:
     app: backend
   ports:
     - protocol: TCP
       port: 5000
       targetPort: 5000
+      nodePort: 30020
