--- a/mongo.yaml
+++ b/mongo.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: mongo
+  name: mongo-deployment
   labels:
     app: mongo
 spec:
@@ -15,17 +15,26 @@ spec:
         app: mongo
     spec:
       containers:
-        - name: mongo
-          image: mongo:4.4.6
-          ports:
-            - containerPort: 27017
-
+      - name: mongodb
+        image: mongo:4.4.6
+        ports:
+        - containerPort: 27017
+        env:
+        - name: MONGO_INITDB_ROOT_USERNAME
+          valueFrom:
+            secretKeyRef: 
+              name: mongo-secret
+              key: mongo-user
+        - name: MONGO_INITDB_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef: 
+              name: mongo-secret
+              key: mongo-pwd
 ---
-
 apiVersion: v1
 kind: Service
 metadata:
-  name: mongo
+  name: mongo-service
 spec:
   selector:
     app: mongo
