--- a/outlets/values-cai.yaml
+++ b/outlets/values-cai.yaml
@@ -5,15 +5,15 @@
 replicaCount: 1
 
 apiImage:
-  repository: reisafriche/python-api
+  repository: clytze/test-python
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "1.0.3"
 
 webImage:
-  repository: reisafriche/vue-app
+  repository: clytze/test-frontend
   pullPolicy: IfNotPresent
-  tag: "k8s"
+  tag: "1.0.3"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -40,6 +40,22 @@ securityContext: {}
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
   # runAsUser: 1000
+
+mongodb:
+  svcName: mongo-service
+  port: 27017
+  version: "4.4.6"
+
+api:
+  name: api
+  svcName: api-service
+  port: 5000
+  nodePort: 30020
+
+webapp:
+  svcName: outlets-service
+  port: 8080
+  nodePort: 30030
 
 service:
   type: ClusterIP
