--- a/outlets/values.yaml
+++ b/outlets/values.yaml
@@ -41,6 +41,8 @@ securityContext: {}
   # runAsNonRoot: true
   # runAsUser: 1000
 
+namespaceKey: kubernetes.io/metadata.name
+
 mongodb:
   svcName: mongo-service
   port: 27017
