--- a/developer-role.yaml
+++ b/developer-role.yaml
@@ -2,22 +2,25 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata: 
   namespace: default
-  name: viewer
+  name: developer
 rules:
   - apiGroups: [""]
-    resources: ["pods", "services"]
-    verbs: ["get", "watch", "list"]
+    resources: ["pods", "services", "deployment", "configmaps"]
+    verbs: ["get", "watch", "list", "update"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
   namespace: default
-  name: viewer-binding
+  name: developer-binding
 subjects:
   - kind: User
-    name: Fan
+    name: fan
+    apiGroup: rbac.authorization.k8s.io
+  - kind: User
+    name: yuna
     apiGroup: rbac.authorization.k8s.io
 roleRef:
   kind: Role
-  name: viewer
+  name: developer
   apiGroup: rbac.authorization.k8s.io
