--- a/outlets/templates/developer-role.yaml
+++ b/outlets/templates/developer-role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: developer
 rules:
   - apiGroups: [""]
-    resources: ["pods", "services", "deployment", "configmaps"]
+    resources: ["pods", "services", "deployment", "configmaps", "namespaces"]
     verbs: ["get", "watch", "list", "update"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
