--- a/outlets/templates/mongo.yaml
+++ b/outlets/templates/mongo.yaml
@@ -32,8 +32,21 @@ spec:
               key: mongo-pwd
         volumeMounts:
             - name: storage
-              mountPath: /db
+              mountPath: /data/db
       volumes:
         - name: storage
           persistentVolumeClaim:
             claimName: mongo-pvc
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{.Values.mongodb.svcName}}
+spec:
+  selector:
+    app: mongo
+  ports:
+    - protocol: TCP
+      port: {{.Values.mongodb.port}}
+      targetPort: {{.Values.mongodb.port}}
+
