--- a/outlets/values-ssh.yaml
+++ b/outlets/values-ssh.yaml
@@ -8,7 +8,7 @@ apiImage:
   repository: reisafriche/python-api
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "v2"
 
 webImage:
   repository: reisafriche/vue-app
