--- a/outlets/values-ssh.yaml
+++ b/outlets/values-ssh.yaml
@@ -4,6 +4,11 @@
 
 replicaCount: 1
 
+dbImage:
+  repository: mongodb
+  pullPolicy: IfNotPresent
+  tag: "4.4.6"
+  
 apiImage:
   repository: reisafriche/python-api
   pullPolicy: IfNotPresent
